Resources/City_Data.ipynb

--- a/PyBer_Challenge_starter_code.ipynb
+++ b/PyBer_Challenge_starter_code.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
     "import statistics\n",
     "\n",
     "# File to Load (Remember to change these)\n",
-    "city_data_to_load = \"city_data.csv\"\n",
-    "ride_data_to_load = \"ride_data.csv\"\n",
+    "city_data_to_load = \"Resources/city_data.csv\"\n",
+    "ride_data_to_load = \"Resources/ride_data.csv\"\n",
     "\n",
     "# Read the City and Ride Data\n",
     "city_data_df = pd.read_csv(city_data_to_load)\n",
