Resources/City_Data & Ride_Data.ipynb

--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -126,6 +126,51 @@
        "      <td>46</td>\n",
        "      <td>Urban</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>South Latoya</td>\n",
+       "      <td>2019-03-11 12:26:48</td>\n",
+       "      <td>9.52</td>\n",
+       "      <td>1994999424437</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Urban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>New Paulville</td>\n",
+       "      <td>2019-02-27 11:17:56</td>\n",
+       "      <td>43.25</td>\n",
+       "      <td>793208410091</td>\n",
+       "      <td>44</td>\n",
+       "      <td>Urban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Simpsonburgh</td>\n",
+       "      <td>2019-04-26 00:43:24</td>\n",
+       "      <td>35.98</td>\n",
+       "      <td>111953927754</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Urban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>South Karenland</td>\n",
+       "      <td>2019-01-08 03:28:48</td>\n",
+       "      <td>35.09</td>\n",
+       "      <td>7995623208694</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Urban</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>North Jasmine</td>\n",
+       "      <td>2019-03-09 06:26:29</td>\n",
+       "      <td>42.81</td>\n",
+       "      <td>5327642267789</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Urban</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -137,16 +182,26 @@
        "2  Port Samanthamouth  2019-02-24 04:29:00  33.44  2005065760003   \n",
        "3          Rodneyfort  2019-02-10 23:22:03  23.44  5149245426178   \n",
        "4          South Jack  2019-03-06 04:28:35  34.58  3908451377344   \n",
+       "5        South Latoya  2019-03-11 12:26:48   9.52  1994999424437   \n",
+       "6       New Paulville  2019-02-27 11:17:56  43.25   793208410091   \n",
+       "7        Simpsonburgh  2019-04-26 00:43:24  35.98   111953927754   \n",
+       "8     South Karenland  2019-01-08 03:28:48  35.09  7995623208694   \n",
+       "9       North Jasmine  2019-03-09 06:26:29  42.81  5327642267789   \n",
        "\n",
        "   driver_count   type  \n",
        "0             5  Urban  \n",
        "1            72  Urban  \n",
        "2            57  Urban  \n",
        "3            34  Urban  \n",
-       "4            46  Urban  "
+       "4            46  Urban  \n",
+       "5            10  Urban  \n",
+       "6            44  Urban  \n",
+       "7            21  Urban  \n",
+       "8             4  Urban  \n",
+       "9            33  Urban  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
