--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -126,51 +126,6 @@
        "      <td>46</td>\n",
        "      <td>Urban</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>South Latoya</td>\n",
-       "      <td>2019-03-11 12:26:48</td>\n",
-       "      <td>9.52</td>\n",
-       "      <td>1994999424437</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Urban</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>New Paulville</td>\n",
-       "      <td>2019-02-27 11:17:56</td>\n",
-       "      <td>43.25</td>\n",
-       "      <td>793208410091</td>\n",
-       "      <td>44</td>\n",
-       "      <td>Urban</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Simpsonburgh</td>\n",
-       "      <td>2019-04-26 00:43:24</td>\n",
-       "      <td>35.98</td>\n",
-       "      <td>111953927754</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Urban</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>South Karenland</td>\n",
-       "      <td>2019-01-08 03:28:48</td>\n",
-       "      <td>35.09</td>\n",
-       "      <td>7995623208694</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Urban</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>North Jasmine</td>\n",
-       "      <td>2019-03-09 06:26:29</td>\n",
-       "      <td>42.81</td>\n",
-       "      <td>5327642267789</td>\n",
-       "      <td>33</td>\n",
-       "      <td>Urban</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -182,26 +137,16 @@
        "2  Port Samanthamouth  2019-02-24 04:29:00  33.44  2005065760003   \n",
        "3          Rodneyfort  2019-02-10 23:22:03  23.44  5149245426178   \n",
        "4          South Jack  2019-03-06 04:28:35  34.58  3908451377344   \n",
-       "5        South Latoya  2019-03-11 12:26:48   9.52  1994999424437   \n",
-       "6       New Paulville  2019-02-27 11:17:56  43.25   793208410091   \n",
-       "7        Simpsonburgh  2019-04-26 00:43:24  35.98   111953927754   \n",
-       "8     South Karenland  2019-01-08 03:28:48  35.09  7995623208694   \n",
-       "9       North Jasmine  2019-03-09 06:26:29  42.81  5327642267789   \n",
        "\n",
        "   driver_count   type  \n",
        "0             5  Urban  \n",
        "1            72  Urban  \n",
        "2            57  Urban  \n",
        "3            34  Urban  \n",
-       "4            46  Urban  \n",
-       "5            10  Urban  \n",
-       "6            44  Urban  \n",
-       "7            21  Urban  \n",
-       "8             4  Urban  \n",
-       "9            33  Urban  "
+       "4            46  Urban  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,131 +168,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "city\n",
-       "Amandaburgh      18\n",
-       "Barajasview      22\n",
-       "Barronchester    16\n",
-       "Bethanyland      18\n",
-       "Bradshawfurt     10\n",
+       "type\n",
+       "Rural        125\n",
+       "Suburban     625\n",
+       "Urban       1625\n",
        "Name: ride_id, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#  1. Get the total rides for each city type\n",
-    "city_data_count = pyber_data_df.groupby([\"city\"]).count()[\"ride_id\"]\n",
-    "city_data_count.head()"
+    "total_rides = pyber_data_df.groupby([\"type\"]).count()[\"ride_id\"]\n",
+    "total_rides.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "city\n",
-       "Amandaburgh      216\n",
-       "Barajasview      572\n",
-       "Barronchester    176\n",
-       "Bethanyland      396\n",
-       "Bradshawfurt      70\n",
+       "type\n",
+       "Rural         537\n",
+       "Suburban     8570\n",
+       "Urban       59602\n",
        "Name: driver_count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 2. Get the total drivers for each city type\n",
-    "city_data_sum = pyber_data_df.groupby([\"city\"]).sum()[\"driver_count\"]\n",
-    "city_data_sum.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "city\n",
-       "Amandaburgh      443.55\n",
-       "Barajasview      557.31\n",
-       "Barronchester    582.76\n",
-       "Bethanyland      593.21\n",
-       "Bradshawfurt     400.64\n",
-       "Name: fare, dtype: float64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#  3. Get the total amount of fares for each city type\n",
-    "city_data_sum = pyber_data_df.groupby([\"city\"]).sum()[\"fare\"]\n",
-    "city_data_sum.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "city\n",
-       "Amandaburgh      24.641667\n",
-       "Barajasview      25.332273\n",
-       "Barronchester    36.422500\n",
-       "Bethanyland      32.956111\n",
-       "Bradshawfurt     40.064000\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#  4. Get the average fare per ride for each city type. \n",
-    "city_data_average_per_ride= pyber_data_df.groupby([\"city\"]).sum()[\"fare\"]/pyber_data_df.groupby([\"city\"]).count()[\"ride_id\"]\n",
-    "city_data_average_per_ride.head()"
+    "total_drivers = pyber_data_df.groupby([\"type\"]).sum()[\"driver_count\"]\n",
+    "total_drivers.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "city\n",
-       "Amandaburgh      2.053472\n",
-       "Barajasview      0.974318\n",
-       "Barronchester    3.311136\n",
-       "Bethanyland      1.498005\n",
-       "Bradshawfurt     5.723429\n",
-       "dtype: float64"
+       "type\n",
+       "Rural        4327.93\n",
+       "Suburban    19356.33\n",
+       "Urban       39854.38\n",
+       "Name: fare, dtype: float64"
       ]
      },
      "execution_count": 20,
@@ -356,38 +241,91 @@
     }
    ],
    "source": [
-    "# 5. Get the average fare per driver for each city type. \n",
-    "city_data_average_per_driver= pyber_data_df.groupby([\"city\"]).sum()[\"fare\"]/pyber_data_df.groupby([\"city\"]).sum()[\"driver_count\"]\n",
-    "city_data_average_per_driver.head()"
+    "#  3. Get the total amount of fares for each city type\n",
+    "total_fares = pyber_data_df.groupby([\"type\"]).sum()[\"fare\"]\n",
+    "total_fares.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#  6. Create a PyBer summary DataFrame. \n",
-    "pyber_summary_df ="
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pyber_summary_df' is not defined",
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural       34.623440\n",
+       "Suburban    30.970128\n",
+       "Urban       24.525772\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  4. Get the average fare per ride for each city type. \n",
+    "average_fare_per_ride = total_fares/total_rides\n",
+    "average_fare_per_ride"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural       8.059460\n",
+       "Suburban    2.258615\n",
+       "Urban       0.668675\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 5. Get the average fare per driver for each city type. \n",
+    "average_fare_per_driver = total_fares/total_drivers\n",
+    "average_fare_per_driver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "keyword can't be an expression (2187042923.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_44496\\176611666.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#  7. Cleaning up the DataFrame. Delete the index name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mpyber_summary_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'pyber_summary_df' is not defined"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Woyram\\AppData\\Local\\Temp\\ipykernel_35692\\2187042923.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    pyber_summary_df= pd.DataFrame(\"index\"=[\"Rural\",\"Suburban\",\"Urban\"],\u001b[0m\n\u001b[1;37m                                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m keyword can't be an expression\n"
      ]
     }
    ],
+   "source": [
+    "#  6. Create a PyBer summary DataFrame. \n",
+    "pyber_summary_df= pd.DataFrame(\"index\"=[\"Rural\",\"Suburban\",\"Urban\"],\n",
+    "                               \"Columns\"=[\"Total_rides\", \"total_drivers\", \"total_fares\", \"average_fare_per_ride\", \"average_fare_per_driver\"])\n",
+    "print(pyber_summary_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#  7. Cleaning up the DataFrame. Delete the index name\n",
     "pyber_summary_df.index.name = None"
